--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -25,9 +25,10 @@
         android:id="@+id/textView3"
         android:layout_width="127dp"
         android:layout_height="23dp"
+        android:layout_marginTop="8dp"
         android:layout_marginBottom="150dp"
-        android:text="Sign In Instead"
         android:background="@drawable/text_selector"
+        android:text="Sign In Instead"
         android:textAlignment="center"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
