--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -13,19 +13,19 @@
         android:layout_marginTop="52dp"
         android:layout_marginBottom="10dp"
         android:background="@drawable/round_textedit"
-        android:text="Register"
+        android:text="Login"
         android:textSize="16sp"
         app:layout_constraintBottom_toTopOf="@id/textView10"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/editTextPassword4"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintTop_toBottomOf="@id/editTextPassword4" />
 
     <TextView
         android:id="@+id/textView10"
         android:layout_width="127dp"
-        android:layout_height="23dp"
-        android:layout_marginBottom="150dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="56dp"
         android:background="@drawable/text_selector"
         android:text="Sign Up Instead"
         android:textAlignment="center"
@@ -49,13 +49,15 @@
         android:id="@+id/editTextTextEmailAddress3"
         android:layout_width="254dp"
         android:layout_height="38dp"
-        android:layout_marginTop="56dp"
+        android:layout_marginTop="60dp"
+        android:layout_marginBottom="8dp"
         android:background="@drawable/round_textedit"
         android:ems="10"
         android:hint="Email"
         android:inputType="textEmailAddress"
         android:singleLine="false"
         android:textAlignment="center"
+        app:layout_constraintBottom_toTopOf="@+id/editTextPassword4"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent"
@@ -65,6 +67,7 @@
         android:id="@+id/editTextPassword4"
         android:layout_width="254dp"
         android:layout_height="38dp"
+        android:layout_marginTop="8dp"
         android:background="@drawable/round_textedit"
         android:ems="10"
         android:hint="Password"
