--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,10 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="pink">#F7D6E0</color>
+    <color name="yellow">#F4F1BB</color>
+    <color name="blue">#B4E1FF</color>
+    <color name="purple">#5B3758</color>
+    <color name="darkPink">#C65B7C</color>
+
 </resources>
