--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,7 +9,7 @@
     <color name="white">#FFFFFFFF</color>
     <color name="pink">#F7D6E0</color>
     <color name="yellow">#F4F1BB</color>
-    <color name="blue">#B4E1FF</color>
+    <color name="blue">#56aed7</color>
     <color name="purple">#5B3758</color>
     <color name="darkPink">#C65B7C</color>
 
