finished profile page view

--- a/app/src/main/res/drawable/rounded_background.xml
+++ b/app/src/main/res/drawable/rounded_background.xml
@@ -1,5 +1,5 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="#948383" />
-    <corners android:radius="5dp" />
-    <padding android:left="3dp" android:top="3dp" android:right="3dp" android:bottom="3dp" />
+    <solid android:color="#FFE2E2" />
+    <corners android:radius="45dp" />
+    <padding android:left="5dp" android:top="5dp" android:right="5dp" android:bottom="5dp" />
 </shape>
