--- a/app/src/main/res/drawable/circular.xml
+++ b/app/src/main/res/drawable/circular.xml
@@ -12,5 +12,5 @@ android:useLevel="false" >
 
 <stroke
     android:width="9dp"
-    android:color="@android:color/white" />
+    android:color="#6DFF5722" />
 </shape>
