--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -8,32 +8,32 @@
     tools:ignore="ExtraText">
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/RegisterButton"
         android:layout_width="193dp"
         android:layout_height="48dp"
         android:layout_marginTop="52dp"
         android:layout_marginBottom="10dp"
         android:background="@drawable/round_textedit"
-        android:text="Register"
+        android:text="@string/register"
         android:textSize="16sp"
-        app:layout_constraintBottom_toTopOf="@+id/textView3"
+        app:layout_constraintBottom_toTopOf="@+id/SigninText"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextPassword" />
+        app:layout_constraintTop_toBottomOf="@+id/ConfirmPass" />
 
     <TextView
-        android:id="@+id/textView3"
+        android:id="@+id/SigninText"
         android:layout_width="127dp"
         android:layout_height="23dp"
         android:layout_marginTop="8dp"
         android:layout_marginBottom="150dp"
         android:background="@drawable/text_selector"
-        android:text="Sign In Instead"
+        android:text="@string/sign_in_instead"
         android:textAlignment="center"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button"
+        app:layout_constraintTop_toBottomOf="@+id/RegisterButton"
         app:layout_constraintVertical_bias="0.033" />
 
     <ImageView
@@ -44,7 +44,8 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/img"/>
+        app:srcCompat="@drawable/img"
+        android:contentDescription="@string/logo" />
 
     <EditText
         android:id="@+id/editTextTextEmailAddress"
@@ -53,55 +54,58 @@
         android:layout_marginTop="4dp"
         android:background="@drawable/round_textedit"
         android:ems="10"
-        android:hint="Email"
+        android:hint="@string/email"
         android:inputType="textEmailAddress"
         android:singleLine="false"
         android:textAlignment="center"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView" />
+        app:layout_constraintTop_toBottomOf="@+id/imageView"
+        android:autofillHints="emailAddress" />
 
     <EditText
-        android:id="@+id/editTextPassword1"
+        android:id="@+id/RegisterPass"
         android:layout_width="254dp"
         android:layout_height="38dp"
         android:layout_marginTop="8dp"
         android:background="@drawable/round_textedit"
         android:ems="10"
-        android:hint="Password"
+        android:hint="@string/password"
         android:inputType="text|textPassword"
         android:singleLine="false"
         android:textAlignment="center"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress" />
+        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress"
+        android:autofillHints="password" />
 
     <EditText
-        android:id="@+id/editTextPassword"
+        android:id="@+id/ConfirmPass"
         android:layout_width="254dp"
         android:layout_height="38dp"
         android:layout_marginTop="8dp"
         android:background="@drawable/round_textedit"
         android:ems="10"
-        android:hint="Confirm Password"
+        android:hint="@string/confirm_password"
         android:inputType="text|textPassword"
         android:singleLine="false"
         android:textAlignment="center"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/editTextPassword1" />
+        app:layout_constraintTop_toBottomOf="@id/RegisterPass"
+        android:autofillHints="password" />
 
     <ProgressBar
         android:id="@+id/progressBar"
         style="?android:attr/progressBarStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintBottom_toTopOf="@+id/button"
+        app:layout_constraintBottom_toTopOf="@+id/RegisterButton"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextPassword" />
+        app:layout_constraintTop_toBottomOf="@+id/ConfirmPass" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
