--- a/app/src/main/res/layout/activity_user_init.xml
+++ b/app/src/main/res/layout/activity_user_init.xml
@@ -23,131 +23,116 @@
             android:orientation="vertical">
 
             <TextView
-                android:id="@+id/textView"
+                android:id="@+id/init_header"
                 android:layout_width="339dp"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="30sp"
                 android:baselineAligned="false"
                 android:fontFamily="sans-serif-black"
-                android:text="Let's get to know more about you!"
+                android:text="@string/let_s_get_to_know_more_about_you"
                 android:textAlignment="center"
                 android:textSize="34sp" />
 
             <TextView
-                android:id="@+id/textView2"
+                android:id="@+id/init_username_text"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20sp"
                 android:gravity="center_horizontal"
-                android:text="what's your graduation year?"
+                android:text="@string/let_s_start_with_an_username"
                 android:textSize="20sp" />
 
             <EditText
-                android:id="@+id/editTextText"
+                android:id="@+id/init_username_input"
                 android:layout_width="match_parent"
                 android:layout_height="50sp"
                 android:layout_margin="30sp"
                 android:background="@drawable/round_textedit"
                 android:ems="10"
+                android:hint="@string/username"
                 android:inputType="text"
-                android:text="Name" />
-
+                android:autofillHints="username" />
 
             <TextView
-                android:id="@+id/textView4"
+                android:id="@+id/init_year_text"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="20sp"
                 android:gravity="center_horizontal"
-                android:text="what's your major?"
+                android:text="@string/what_s_your_graduation_year"
                 android:textSize="20sp" />
 
+
             <EditText
-                android:id="@+id/editTextText2"
+                android:id="@+id/init_year_input"
                 android:layout_width="match_parent"
                 android:layout_height="50sp"
                 android:layout_margin="30sp"
                 android:background="@drawable/round_textedit"
                 android:ems="10"
-                android:inputType="text"
-                android:text="Name" />
+                android:hint="@string/year"
+                android:inputType="number" />
 
             <TextView
-                android:id="@+id/textView5"
+                android:id="@+id/init_major_text"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center_horizontal"
-                android:text="what's your major?"
+                android:text="@string/what_s_your_major"
                 android:textSize="20sp" />
 
             <EditText
-                android:background="@drawable/round_textedit"
-                android:id="@+id/editTextText3"
+                android:id="@+id/init_major_input"
                 android:layout_width="match_parent"
                 android:layout_height="50sp"
                 android:layout_margin="30sp"
-                android:ems="10"
-                android:inputType="text"
-                android:text="Name" />
-
-            <TextView
-                android:id="@+id/textView6"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center_horizontal"
-                android:text="what's your major?"
-                android:textSize="20sp" />
-
-            <EditText
                 android:background="@drawable/round_textedit"
-                android:id="@+id/editTextText4"
-                android:layout_width="match_parent"
-                android:layout_height="50sp"
-                android:layout_margin="30sp"
                 android:ems="10"
+                android:hint="@string/major"
                 android:inputType="text"
-                android:text="Name" />
+                android:autofillHints="majors" />
 
             <TextView
-                android:id="@+id/textView7"
+                android:id="@+id/init_school_text"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center_horizontal"
-                android:text="what's your major?"
-                android:textSize="20sp" />
-
-            <EditText
-                android:background="@drawable/round_textedit"
-                android:id="@+id/editTextText5"
-                android:layout_width="match_parent"
-                android:layout_height="50sp"
-                android:layout_margin="30sp"
-                android:ems="10"
-                android:inputType="text"
-                android:text="Name" />
-
-            <TextView
-                android:id="@+id/textView8"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center_horizontal"
-                android:text="which school are you from?"
+                android:text="@string/which_school_are_you_from"
                 android:textSize="20sp" />
 
             <Spinner
-                android:background="@drawable/round_textedit"
-                android:id="@+id/spinner"
+                android:id="@+id/init_school_spinner"
                 android:layout_width="match_parent"
                 android:layout_height="50sp"
                 android:layout_margin="30sp"
+                android:layout_marginBottom="50sp"
 
-                 />
+                android:background="@drawable/round_textedit" />
+
+            <ProgressBar
+                android:id="@+id/progressBar4"
+                style="?android:attr/progressBarStyle"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
 
             <Button
-                android:id="@+id/button2"
+                android:id="@+id/init_submit_btn"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="50sp"
+                android:layout_marginTop="30sp"
                 android:background="@drawable/round_textedit"
-                android:text="Submit" />
+                android:text="@string/next" />
+
+            <TextView
+                android:id="@+id/resentText"
+                android:background="@drawable/text_selector"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="5sp"
+                android:layout_marginBottom="50sp"
+                android:gravity="center_horizontal"
+                android:text="@string/resent_verification_email"
+                android:textSize="12sp" />
 
         </LinearLayout>
     </ScrollView>
