--- a/app/src/main/res/drawable/circular.xml
+++ b/app/src/main/res/drawable/circular.xml
@@ -4,13 +4,13 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
 android:innerRadius="0dp"
 android:shape="ring"
-android:thicknessRatio="2.0"
+android:thicknessRatio="2"
 android:useLevel="false" >
 
 <solid
     android:color="@android:color/transparent" />
 
 <stroke
-    android:width="9dp"
-    android:color="#6DFF5722" />
+    android:width="2dp"
+    android:color="@color/black" />
 </shape>
