--- a/app/src/main/res/layout/activity_inside_chat.xml
+++ b/app/src/main/res/layout/activity_inside_chat.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".inside_chat">
+    tools:context=".Inside_chat">
 
     <RelativeLayout
         android:layout_width="match_parent"
