--- a/app/src/main/res/layout/fragment_post.xml
+++ b/app/src/main/res/layout/fragment_post.xml
@@ -1,62 +1,105 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".PostFragment">
 
-    <LinearLayout
+    <RelativeLayout
+        android:id="@+id/main_toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="2dp"
-        android:orientation="vertical">
-        <androidx.appcompat.widget.Toolbar
-            android:id="@+id/myToolbar"
-            android:layout_width="match_parent"
+        android:background="@color/pink"
+        android:minHeight="?attr/actionBarSize"
+        android:padding="10dp">
+
+        <TextView
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="@color/pink"
-            android:minHeight="?attr/actionBarSize"
-            app:title = "FindMyClassmates"/>
+            android:layout_centerVertical="true"
+            android:layout_marginStart="10dp"
+            android:text="Create Post"
+            android:textColor="@color/black"
+            android:textSize="22sp"
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/upload"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="20dp"
+            android:text="Post"
+            android:textColor="@color/black"
+            android:textStyle="bold"
+            android:layout_alignParentEnd="true"/>
+
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/main_toolbar"
+        android:orientation="horizontal">
+
+        <LinearLayout
+            android:id="@+id/profile_bar"
+            android:layout_width="match_parent"
+            android:layout_height="55dp"
+            android:layout_margin="5sp">
+
+            <de.hdodenhof.circleimageview.CircleImageView
+                android:id="@+id/tool_bar_profile_image"
+                android:layout_width="60dp"
+                android:layout_height="wrap_content"
+                android:src="@drawable/img"
+                app:civ_border_width="2dp" />
+
+            <TextView
+                android:id="@+id/user"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignStart="@id/tool_bar_profile_image"
+                android:layout_weight="1"
+                android:layout_marginStart="6dp"
+                android:text="Amy Rong" />
+        </LinearLayout>
 
         <EditText
-            android:id="@+id/ptitle"
+            android:id="@+id/post"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Enter Title"
+            android:layout_below="@id/profile_bar"
+            android:hint="What's on your mind?"
             android:minHeight="80dp"
-            android:padding="10dp"
+            android:padding="20dp"
             android:singleLine="true" />
 
-        <ImageView
-            android:id="@+id/imagep"
-            android:layout_width="match_parent"
-            android:layout_height="200dp"
-            android:layout_marginTop="15dp"
-            android:src="@drawable/ic_images" />
+    </RelativeLayout>
 
-        <EditText
-            android:id="@+id/pdes"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="15dp"
-            android:gravity="start"
-            android:hint="Enter Description"
-            android:inputType="textCapSentences|textMultiLine"
-            android:minHeight="120dp"
-            android:padding="10dp"
-            android:singleLine="true" />
 
-        <Button
-            android:id="@+id/pupload"
-            style="@style/Widget.AppCompat.Button.Colored"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="end"
-            android:layout_marginTop="20sp"
-            android:text="Upload"
-            android:textAlignment="center"
-            tools:ignore="RtlCompat" />
-    </LinearLayout>
+</RelativeLayout>
 
-</ScrollView>
+
+    <!--        <ImageView-->
+    <!--            android:id="@+id/imagep"-->
+    <!--            android:layout_width="match_parent"-->
+    <!--            android:layout_height="200dp"-->
+    <!--            android:layout_marginTop="15dp"-->
+    <!--            android:src="@drawable/ic_images" />-->
+
+    <!--        <EditText-->
+    <!--            android:id="@+id/pdes"-->
+    <!--            android:layout_width="match_parent"-->
+    <!--            android:layout_height="wrap_content"-->
+    <!--            android:layout_marginTop="15dp"-->
+    <!--            android:gravity="start"-->
+    <!--            android:hint="Enter Description"-->
+    <!--            android:inputType="textCapSentences|textMultiLine"-->
+    <!--            android:minHeight="120dp"-->
+    <!--            android:padding="10dp"-->
+    <!--            android:singleLine="true" />-->
+
+
+
+
