chat history done!

--- a/app/src/main/res/layout/activity_init_avatar.xml
+++ b/app/src/main/res/layout/activity_init_avatar.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Init_avatar">
+    tools:context=".regLogInActivity.Init_avatar">
 
     <ProgressBar
         android:id="@+id/progressBar3"
