--- a/app/src/main/res/layout/fragment_classes.xml
+++ b/app/src/main/res/layout/fragment_classes.xml
@@ -1,20 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/frameLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".ClassesFragment">
 
-    <!-- TODO: Update blank fragment layout -->
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/myToolbar"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="216dp"
         android:background="@color/pink"
         android:minHeight="?attr/actionBarSize"
-        app:title = "FindMyClassmates"
-        app:menu="@menu/top"/>
+        app:layout_constraintBottom_toTopOf="@+id/classesList"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:menu="@menu/top"
+        app:title="FindMyClassmates" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/classesList"
+        android:layout_width="0dp"
+        android:layout_height="645dp"
+        android:layout_margin="15dp"
+        android:background="@drawable/rounded_background"
+        android:padding="25dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/myToolbar" />
 
 
-</FrameLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
