--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -50,7 +50,7 @@
             app:layout_constraintTop_toBottomOf="@+id/profilePicture" />
 
         <TextView
-            android:id="@+id/nameText"
+            android:id="@+id/usernameText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="30dp"
@@ -63,15 +63,16 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <ImageView
-            android:id="@+id/editName"
+            android:id="@+id/changeUsername"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="70dp"
             android:layout_marginLeft="24dp"
             android:padding="10dp"
             android:background="@drawable/rounded_background"
+            android:clickable="true"
             android:src="@drawable/ic_edit"
-            app:layout_constraintStart_toEndOf="@+id/nameText"
+            app:layout_constraintStart_toEndOf="@+id/usernameText"
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
@@ -84,7 +85,7 @@
             android:background="@drawable/rounded_background"
             android:text="tommytrojan@usc.edu"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/nameText" />
+            app:layout_constraintTop_toBottomOf="@+id/usernameText" />
 
         <Button
             android:id="@+id/classes"
