--- a/app/src/main/res/layout/activity_contact_search.xml
+++ b/app/src/main/res/layout/activity_contact_search.xml
@@ -37,11 +37,14 @@
     </RelativeLayout>
 
     <RelativeLayout
+        android:id="@+id/search_user_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/toolbar"
-        android:layout_margin="10dp"
-        android:id="@+id/search_user_layout">
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginBottom="10dp">
 
         <EditText
             android:id="@+id/seach_username_input"
