--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -87,30 +87,29 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/usernameText" />
 
-        <Button
-            android:id="@+id/classes"
-            android:layout_width="80dp"
-            android:layout_height="85dp"
+        <TextView
+            android:id="@+id/majorText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_marginLeft="30dp"
-            android:layout_marginTop="30dp"
-            android:padding="29dp"
-            android:drawableLeft="@drawable/ic_book"
-            app:backgroundTint="#FFFFFF"
+            android:layout_marginBottom="80dp"
+            android:background="@drawable/rounded_background"
+            android:text="Major: "
+            android:textSize="15dp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/emailText" />
+            app:layout_constraintBottom_toTopOf="@id/itemsList"/>
 
-        <Button
-            android:id="@+id/friends"
-            android:layout_width="80dp"
-            android:layout_height="85dp"
-            android:layout_marginRight="35dp"
-            android:layout_marginTop="30dp"
-            android:padding="29dp"
-            android:drawableLeft="@drawable/ic_profile"
-            android:textSize="12sp"
-            app:backgroundTint="#FFFFFF"
-            app:layout_constraintEnd_toStartOf="@+id/changePicture"
-            app:layout_constraintTop_toBottomOf="@+id/emailText" />
+        <TextView
+            android:id="@+id/yearText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="60dp"
+            android:layout_marginBottom="80dp"
+            android:background="@drawable/rounded_background"
+            android:text="Year: "
+            android:textSize="15dp"
+            app:layout_constraintStart_toEndOf="@id/majorText"
+            app:layout_constraintBottom_toTopOf="@id/itemsList"/>
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/itemsList"
@@ -121,7 +120,7 @@
             android:layout_marginTop="15dp"
             android:layout_marginBottom="100dp"
             android:padding="25dp"
-            app:layout_constraintTop_toBottomOf="@+id/friends"
+            app:layout_constraintTop_toBottomOf="@+id/changePicture"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintBottom_toBottomOf="parent" />
