--- a/app/src/main/res/layout/post_cover.xml
+++ b/app/src/main/res/layout/post_cover.xml
@@ -51,8 +51,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8sp"
-
-                android:textSize="30sp"
+                android:padding="10sp"
+                android:textSize="20sp"
                 tools:text="S 2025CS 2025CS 2025CS 2025CS 2025CS 2025" />
 
             <ImageButton
